# work_space_fastapi

./: .dockerignore  .env  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
src/backup/: Atticus_work_place.db  bill_2_db.py
src/backup/supabase_tables/: consumption.csv  consumption.json  single_page.csv  single_page.json  task_done_list.csv  task_done_list.json
src/fastapi_app/: __init__.py  app.py  background_tasks.py  main.py  model.py  tools.py
src/fastapi_app/data_base/: client.py
src/fastapi_app/dependencies/: __init__.py  csv_filter.py  unzipper.py
src/fastapi_app/routers/: __init__.py  consumption.py  task_categories.py  task_done_entries.py
src/metabase/bill_clean/: __init__.py  csv_filter.py  unzipper.py
src/metabase/bill_clean/bill_csv/: alipay_bill.csv  bill.csv  wechat_bill.csv
src/metabase/jar_file/: metabase.db.trace.db  starter.py
src/metabase/jar_file/plugins/: sample-database.db.mv.db
src/supabase/: test.py
src/supabase/lib/: __init__.py  client_options.py
src/work_space/: app.py  model.py  tools.py
src/work_space/data_base/: client.py
src/work_space/routers/: task_categories.py  task_done_entries.py
tests/: fake_data.py  task_done_list.csv  test.py  test_data.json
