[tool.poetry]
name = "work-space"
version = "0.1.0"
description = ""
authors = ["Atticuszz <1831768457@qq.com>"]
readme = "README.md"
packages = [{include = "work_space", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
postgrest = "^0.12.0"
storage3 = "^0.6.1"
deprecation = "^2.1.0"
gotrue = "^1.2.0"
aiohttp = "^3.8.6"
supafunc = "^0.2.3"
realtime = "^1.0.0"
faker = "^19.10.0"
apscheduler = "^3.10.4"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
