[tool.poetry]
name = "work-space"
version = "0.1.0"
description = ""
authors = ["Atticuszz <1831768457@qq.com>"]
readme = "README.md"
packages = [{include = "work_space", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.109.1"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
faker = "^19.10.0"
apscheduler = "^3.10.4"
python-multipart = "^0.0.7"
pandas = "^2.1.1"
supabase-py-async = "*"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
